overflow bug on mobile test 2

--- a/themes/luc-v1/assets/sass/mobile.scss
+++ b/themes/luc-v1/assets/sass/mobile.scss
@@ -1,4 +1,7 @@
 main {
+  height: 100%;
+  overflow: hidden;
+
   section {
     min-height: 70vh;
     padding-bottom: 3rem;
