--- a/themes/luc-v1/assets/sass/styles.scss
+++ b/themes/luc-v1/assets/sass/styles.scss
@@ -13,7 +13,7 @@
 
 html,
 body {
-  overflow: hidden;
+  height: 100%;
   * {
     box-sizing: border-box;
   }
